tools/tests/errors/surf_lib_18.ki
# fromhex of a non-hex digit must raise.
discard fromhex("zz")
